Updated GenAI tech stack pdf

--- a/genai-usecases/llms/llama-4/llama4.ipynb
+++ b/genai-usecases/llms/llama-4/llama4.ipynb
@@ -1,31 +1,17 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "<a href=\"https://colab.research.google.com/drive/1HhYGms9E0sPPx2J6HMdMI9zUmdRs_gPm?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>"
-      ],
       "metadata": {
         "id": "cfIhzyUtVpak"
-      }
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/drive/1HhYGms9E0sPPx2J6HMdMI9zUmdRs_gPm?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,8 +21,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/126.7 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m126.7/126.7 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
@@ -49,44 +35,42 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "6Dx1NyVUZqXh"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "UZ9A2m3wZq6o"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8woN9v3eSjet"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n"
-      ],
-      "metadata": {
-        "id": "8woN9v3eSjet"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -94,7 +78,6 @@
         "id": "j3k6M-KhZsyH",
         "outputId": "551f809b-f185-4ff6-c3cb-df18f9a38a65"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -103,24 +86,30 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "jbwGBeX2Zuit"
+      },
+      "outputs": [],
       "source": [
         "llm = ChatGroq(\n",
         "    model=\"meta-llama/llama-4-scout-17b-16e-instruct\",\n",
         "    temperature=1\n",
         ")"
-      ],
-      "metadata": {
-        "id": "jbwGBeX2Zuit"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lG12sthzTy7w"
+      },
       "source": [
         "As per Llama 4 Provider, they suggested following guidelines for system prompt\n",
         "\n",
@@ -129,13 +118,15 @@
         "\"Llama 4 is a more steerable model, meaning responses can be easily tailored to meet specific developer outcomes. Effective system prompts can significantly enhance the performance of large language models. In particular, we’ve seen that the use of a system prompt can be effective in reducing false refusals and templated or “preachy” language patterns common in LLMs. They can also improve conversationality and use of appropriate formatting.\n",
         "\n",
         "Consider the prompt below as a basic template for which a developer might want to further customize to meet specific needs or use cases for our Llama 4 models.\""
-      ],
-      "metadata": {
-        "id": "lG12sthzTy7w"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "XxUKr5OyZxQT"
+      },
+      "outputs": [],
       "source": [
         "# System Prompt Suggested by llama 4 team\n",
         "system_prompt = \"\"\"You are an expert conversationalist who responds to the best of\n",
@@ -166,34 +157,11 @@
         ")\n",
         "\n",
         "chain = prompt | llm"
-      ],
-      "metadata": {
-        "id": "XxUKr5OyZxQT"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# This is a notoriously difficult logic puzzle introduced by MIT logician George Boolos in 1996, who titled it\n",
-        "# The Hardest Logic Puzzle Ever. It is indeed abstract and requires multi-step reasoning at a higher complexity level than most puzzles.\n",
-        "# The scenario is often called the Three Gods Riddle\n",
-        "question =  \"\"\"There are three gods named A, B, and C. One is the True god who always\n",
-        "tells the truth, one is the False god who always lies, and one is the Random god who\n",
-        "answers randomly (truthfully or falsely at random). You do not know which god is which.\n",
-        "These gods will answer any yes–no question put to them, but they will answer in their\n",
-        " own language – and you don’t know which of the two words they use (“da” and “ja”)\n",
-        " means “yes” and which means “no.” Your task is to determine which god is True,\n",
-        " which is False, and which is Random by asking three yes-or-no questions,\n",
-        " subject to the following rules: You may ask the questions one at a time;\n",
-        " each question can be directed to any single god of your choice; the gods understand\n",
-        " English but will answer with “da” or “ja” (you cannot ask them to translate these words).\n",
-        " You have only three questions total to figure out all identities​\n",
-        "\"\"\"\n",
-        "response = chain.invoke({\"input\": question})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,11 +169,10 @@
         "id": "MI1kC7nOP0ER",
         "outputId": "d76c4a37-b00b-4419-e421-99ef394e9b43"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "To solve this puzzle, let's break it down step by step.\n",
             "\n",
@@ -261,16 +228,49 @@
             "Would you like to explore more strategies or details on the logical deductions for this puzzle?\n"
           ]
         }
+      ],
+      "source": [
+        "# This is a notoriously difficult logic puzzle introduced by MIT logician George Boolos in 1996, who titled it\n",
+        "# The Hardest Logic Puzzle Ever. It is indeed abstract and requires multi-step reasoning at a higher complexity level than most puzzles.\n",
+        "# The scenario is often called the Three Gods Riddle\n",
+        "question =  \"\"\"There are three gods named A, B, and C. One is the True god who always\n",
+        "tells the truth, one is the False god who always lies, and one is the Random god who\n",
+        "answers randomly (truthfully or falsely at random). You do not know which god is which.\n",
+        "These gods will answer any yes–no question put to them, but they will answer in their\n",
+        " own language – and you don’t know which of the two words they use (“da” and “ja”)\n",
+        " means “yes” and which means “no.” Your task is to determine which god is True,\n",
+        " which is False, and which is Random by asking three yes-or-no questions,\n",
+        " subject to the following rules: You may ask the questions one at a time;\n",
+        " each question can be directed to any single god of your choice; the gods understand\n",
+        " English but will answer with “da” or “ja” (you cannot ask them to translate these words).\n",
+        " You have only three questions total to figure out all identities​\n",
+        "\"\"\"\n",
+        "response = chain.invoke({\"input\": question})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "jaP13YoJRjpV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
